--- a/after/index.html
+++ b/after/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <script async></script>
-    <h1>This si new Heading</h1>
+    <h1>This is new Heading</h1>
     
 </body>
 </html>
